--- a/costmap_cspace/package.xml
+++ b/costmap_cspace/package.xml
@@ -13,11 +13,12 @@
   <depend>roscpp</depend>
   <test_depend>roslint</test_depend>
   <test_depend>rostest</test_depend>
+  <test_depend>rosunit</test_depend>
 
-  <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>laser_geometry</depend>
   <depend>nav_msgs</depend>
+  <depend>sensor_msgs</depend>
   <depend>tf</depend>
   <depend>tf2_sensor_msgs</depend>
 
