--- a/planner_cspace/test/CMakeLists.txt
+++ b/planner_cspace/test/CMakeLists.txt
@@ -1,7 +1,3 @@
-cmake_minimum_required(VERSION 2.8.3)
-
-find_package(catkin REQUIRED COMPONENTS roscpp rostest nav_msgs tf)
-
 catkin_add_gtest(test_cyclic_vec src/test_cyclic_vec.cpp)
 target_link_libraries(test_cyclic_vec ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
@@ -14,11 +10,11 @@ if(PLANNER_CSPACE_PERFORMANCE_TESTS)
   target_link_libraries(test_blockmem_gridmap_performance ${catkin_LIBRARIES} ${Boost_LIBRARIES})
   set_target_properties(test_blockmem_gridmap_performance PROPERTIES COMPILE_FLAGS "${CMAKE_CXX_FLAGS_RELEASE}") # Force release build for performance test.
 
-else(PLANNER_CSPACE_PERFORMANCE_TESTS)
+else()
 
   message("To perform performance tests for planner_cspace, use -DPLANNER_CSPACE_PERFORMANCE_TESTS:=ON")
 
-endif(PLANNER_CSPACE_PERFORMANCE_TESTS)
+endif()
 
 add_rostest_gtest(test_navigate
   test/navigation_rostest.test
