--- a/joystick_interrupt/package.xml
+++ b/joystick_interrupt/package.xml
@@ -11,8 +11,9 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>roscpp</depend>
-  <test_depend>rostest</test_depend>
   <test_depend>roslint</test_depend>
+  <test_depend>rostest</test_depend>
+  <test_depend>rosunit</test_depend>
 
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
