--- a/planner_cspace/test/CMakeLists.txt
+++ b/planner_cspace/test/CMakeLists.txt
@@ -1,8 +1,11 @@
+catkin_add_gtest(test_blockmem_gridmap src/test_blockmem_gridmap.cpp)
+target_link_libraries(test_blockmem_gridmap ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+
 catkin_add_gtest(test_cyclic_vec src/test_cyclic_vec.cpp)
 target_link_libraries(test_cyclic_vec ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
-catkin_add_gtest(test_blockmem_gridmap src/test_blockmem_gridmap.cpp)
-target_link_libraries(test_blockmem_gridmap ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+catkin_add_gtest(test_motion_cache src/test_motion_cache.cpp)
+target_link_libraries(test_motion_cache ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
 if(PLANNER_CSPACE_PERFORMANCE_TESTS)
 
