Add apt-get upgrade in Dockerfile.kinetic

--- a/Dockerfile.kinetic
+++ b/Dockerfile.kinetic
@@ -1,6 +1,7 @@
 FROM ros:kinetic-ros-core
 
 RUN apt-get -qq update \
+  && apt-get upgrade -y \
   && apt-get install -y --no-install-recommends \
     curl \
     libxml2-utils \
