--- a/Dockerfile.indigo
+++ b/Dockerfile.indigo
@@ -1,6 +1,7 @@
 FROM ros:indigo-ros-core
 
 RUN apt-get -qq update \
+  && apt-get upgrade -y \
   && apt-get install -y --no-install-recommends \
     build-essential \
     curl \
