--- a/Dockerfile.lunar
+++ b/Dockerfile.lunar
@@ -1,6 +1,7 @@
 FROM ros:lunar-ros-core
 
 RUN apt-get -qq update \
+  && apt-get upgrade -y \
   && apt-get install -y --no-install-recommends \
     curl \
     libxml2-utils \
