--- a/track_odometry/package.xml
+++ b/track_odometry/package.xml
@@ -20,6 +20,9 @@
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>tf</depend>
+  <depend>tf2</depend>
+  <depend>tf2_geometry_msgs</depend>
+  <depend>tf2_ros</depend>
   <depend>trajectory_msgs</depend>
 
   <depend>neonavigation_common</depend>
