--- a/costmap_cspace/package.xml
+++ b/costmap_cspace/package.xml
@@ -20,6 +20,8 @@
   <depend>nav_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>tf</depend>
+  <depend>tf2_geometry_msgs</depend>
+  <depend>tf2_ros</depend>
   <depend>tf2_sensor_msgs</depend>
 
   <depend>costmap_cspace_msgs</depend>
