Migrate tf to tf2 in map_organizer

--- a/map_organizer/package.xml
+++ b/map_organizer/package.xml
@@ -22,6 +22,9 @@
   <depend>sensor_msgs</depend>
   <depend>tf</depend>
   <depend>tf_conversions</depend>
+  <depend>tf2</depend>
+  <depend>tf2_geometry_msgs</depend>
+  <depend>tf2_ros</depend>
 
   <depend>map_organizer_msgs</depend>
   <depend>neonavigation_common</depend>
