--- a/neonavigation_launch/package.xml
+++ b/neonavigation_launch/package.xml
@@ -14,6 +14,6 @@
   <exec_depend>map_server</exec_depend>
   <exec_depend>planner_cspace</exec_depend>
   <exec_depend>safety_limiter</exec_depend>
-  <exec_depend>tf</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
   <exec_depend>trajectory_tracker</exec_depend>
 </package>
