Migrate tf to tf2 (#230)
* Migrate tf to tf2 in planner_cspace

* Migrate tf to tf2 in track_odometry

* Migrate tf to tf2 in trajectory_tracker

* Replace remaining tf:: functions

* Migrate tf to tf2 in costmap_cspace

* Migrate tf to tf2 in safety_limiter

* Add missing header file

* Migrate tf to tf2 in map_organizer

* Remove unnecessary includes

* Fix datatypes

* Replace static_transform_publisher to tf2

* Remove tf:: functions

--- a/costmap_cspace/CMakeLists.txt
+++ b/costmap_cspace/CMakeLists.txt
@@ -4,12 +4,13 @@ project(costmap_cspace)
 find_package(catkin REQUIRED
   COMPONENTS
     roscpp
-    
+
     geometry_msgs
     laser_geometry
     nav_msgs
     sensor_msgs
-    tf
+    tf2_geometry_msgs
+    tf2_ros
     tf2_sensor_msgs
 
     costmap_cspace_msgs
@@ -21,12 +22,13 @@ catkin_package(
   INCLUDE_DIRS include
   CATKIN_DEPENDS
     roscpp
-    
+
     geometry_msgs
     laser_geometry
     nav_msgs
     sensor_msgs
-    tf
+    tf2_geometry_msgs
+    tf2_ros
     tf2_sensor_msgs
 
     costmap_cspace_msgs
