--- a/planner_cspace/CMakeLists.txt
+++ b/planner_cspace/CMakeLists.txt
@@ -12,7 +12,9 @@ find_package(catkin REQUIRED
     nav_msgs
     sensor_msgs
     std_srvs
-    tf
+    tf2
+    tf2_geometry_msgs
+    tf2_ros
     trajectory_msgs
 
     costmap_cspace
@@ -35,7 +37,9 @@ catkin_package(
     nav_msgs
     sensor_msgs
     std_srvs
-    tf
+    tf2
+    tf2_geometry_msgs
+    tf2_ros
     trajectory_msgs
 
     costmap_cspace
