--- a/map_organizer/CMakeLists.txt
+++ b/map_organizer/CMakeLists.txt
@@ -13,8 +13,9 @@ find_package(catkin REQUIRED
     nav_msgs
     pcl_ros
     sensor_msgs
-    tf
-    tf_conversions
+    tf2
+    tf2_geometry_msgs
+    tf2_ros
 
     map_organizer_msgs
     neonavigation_common
@@ -39,8 +40,9 @@ catkin_package(
     nav_msgs
     pcl_ros
     sensor_msgs
-    tf
-    tf_conversions
+    tf2
+    tf2_geometry_msgs
+    tf2_ros
 
     map_organizer_msgs
     neonavigation_common
