--- a/planner_cspace/package.xml
+++ b/planner_cspace/package.xml
@@ -23,7 +23,9 @@
   <depend>sensor_msgs</depend>
   <depend>std_srvs</depend>
   <depend>trajectory_msgs</depend>
-  <depend>tf</depend>
+  <depend>tf2</depend>
+  <depend>tf2_geometry_msgs</depend>
+  <depend>tf2_ros</depend>
 
   <depend>costmap_cspace</depend>
   <depend>costmap_cspace_msgs</depend>
