--- a/safety_limiter/package.xml
+++ b/safety_limiter/package.xml
@@ -18,8 +18,8 @@
   <depend>geometry_msgs</depend>
   <depend>pcl_ros</depend>
   <depend>sensor_msgs</depend>
-  <depend>tf</depend>
-  <depend>tf_conversions</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_sensor_msgs</depend>
 
   <depend>neonavigation_common</depend>
 
