--- a/planner_cspace/package.xml
+++ b/planner_cspace/package.xml
@@ -11,9 +11,12 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>roscpp</depend>
+
   <test_depend>roslint</test_depend>
   <test_depend>rostest</test_depend>
   <test_depend>rosunit</test_depend>
+  <test_depend>map_server</test_depend>
+  <test_depend>trajectory_tracker</test_depend>
 
   <depend>actionlib</depend>
   <depend>diagnostic_updater</depend>
