--- a/Dockerfile.lunar
+++ b/Dockerfile.lunar
@@ -6,7 +6,7 @@ RUN apk add --no-cache git
 WORKDIR /repos
 
 COPY . /repos/src/neonavigation
-RUN cd /repos/src && git clone --depth=1 -b add-path-with-velocity-msg https://github.com/at-wat/neonavigation_msgs.git
+RUN cd /repos/src && git clone --depth=1 https://github.com/at-wat/neonavigation_msgs.git
 
 RUN mkdir -p /repos-manifests/src \
   && find . -name package.xml | xargs -ISRC cp --parents SRC /repos-manifests/
