--- a/.post-release/docker-compose.yml
+++ b/.post-release/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '2'
 services:
-  ros:
+  ros-neonavigation:
     image: "neonavigation-shadow-fixed:${ROS_DISTRO}"
     volumes:
       - "/tmp/.X11-unix:/tmp/.X11-unix"
