--- a/track_odometry/test/CMakeLists.txt
+++ b/track_odometry/test/CMakeLists.txt
@@ -1,4 +1,7 @@
-catkin_add_gtest(test_tf_projection src/test_tf_projection.cpp)
+catkin_add_gtest(test_tf_projection
+  src/test_tf_projection.cpp
+  ../src/tf_projection.cpp
+)
 target_link_libraries(test_tf_projection ${catkin_LIBRARIES})
 
 add_rostest_gtest(test_track_odometry
