--- a/planner_cspace/CMakeLists.txt
+++ b/planner_cspace/CMakeLists.txt
@@ -70,8 +70,9 @@ include_directories(include ${catkin_INCLUDE_DIRS})
 
 add_executable(planner_3d
   src/planner_3d.cpp
-  src/rotation_cache.cpp
   src/motion_cache.cpp
+  src/path_interpolator.cpp
+  src/rotation_cache.cpp
 )
 target_link_libraries(planner_3d ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 add_dependencies(planner_3d ${catkin_EXPORTED_TARGETS})
