Update CMakeLists for cmake3 era

--- a/planner_cspace/CMakeLists.txt
+++ b/planner_cspace/CMakeLists.txt
@@ -1,72 +1,40 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.1.3)
 project(planner_cspace)
 
-find_package(catkin REQUIRED
-  COMPONENTS
-    roscpp
+set(CATKIN_DEPENDS
+  roscpp
 
-    actionlib
-    diagnostic_updater
-    geometry_msgs
-    move_base_msgs
-    nav_msgs
-    sensor_msgs
-    std_srvs
-    tf2
-    tf2_geometry_msgs
-    tf2_ros
-    trajectory_msgs
+  actionlib
+  diagnostic_updater
+  geometry_msgs
+  move_base_msgs
+  nav_msgs
+  sensor_msgs
+  std_srvs
+  tf2
+  tf2_geometry_msgs
+  tf2_ros
+  trajectory_msgs
 
-    costmap_cspace
-    costmap_cspace_msgs
-    neonavigation_common
-    planner_cspace_msgs
-    trajectory_tracker_msgs
+  costmap_cspace
+  costmap_cspace_msgs
+  neonavigation_common
+  planner_cspace_msgs
+  trajectory_tracker_msgs
 )
 
+find_package(catkin REQUIRED COMPONENTS ${CATKIN_DEPENDS})
 find_package(Boost REQUIRED COMPONENTS chrono)
 find_package(OpenMP REQUIRED)
-
 catkin_package(
-  CATKIN_DEPENDS
-    roscpp
-
-    actionlib
-    diagnostic_updater
-    geometry_msgs
-    move_base_msgs
-    nav_msgs
-    sensor_msgs
-    std_srvs
-    tf2
-    tf2_geometry_msgs
-    tf2_ros
-    trajectory_msgs
-
-    costmap_cspace
-    costmap_cspace_msgs
-    neonavigation_common
-    planner_cspace_msgs
-    trajectory_tracker_msgs
+  CATKIN_DEPENDS ${CATKIN_DEPENDS}
 )
 
-include(CheckCXXCompilerFlag)
-CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
-CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
-if(COMPILER_SUPPORTS_CXX11)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-elseif(COMPILER_SUPPORTS_CXX0X)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-else()
-  message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
-endif()
 
+set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -funroll-loops -finline-functions ${OpenMP_CXX_FLAGS}")
-
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
-#set(CMAKE_LD_FLAGS "${CMAKE_CXX_FLAGS} -pg")
-
 include_directories(include ${catkin_INCLUDE_DIRS})
+
 
 add_executable(planner_3d
   src/planner_3d.cpp
@@ -98,6 +66,7 @@ if(CATKIN_ENABLE_TESTING)
   roslint_cpp()
   roslint_add_test()
 endif()
+
 
 install(TARGETS
     dummy_robot
