Downgrade cmake version

--- a/costmap_cspace/CMakeLists.txt
+++ b/costmap_cspace/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.1.3)
+cmake_minimum_required(VERSION 3.0.2)
 project(costmap_cspace)
 
 set(CATKIN_DEPENDS
@@ -24,8 +24,7 @@ catkin_package(
 )
 
 
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations -DROS_DISTRO_$ENV{ROS_DISTRO}=1")
+add_compile_options(-std=c++11 -Wno-deprecated-declarations)
 include_directories(include ${catkin_INCLUDE_DIRS})
 
 
