--- a/joystick_interrupt/CMakeLists.txt
+++ b/joystick_interrupt/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.1.3)
+cmake_minimum_required(VERSION 3.0.2)
 project(joystick_interrupt)
 
 set(CATKIN_DEPENDS
@@ -17,7 +17,7 @@ catkin_package(
 )
 
 
-set(CMAKE_CXX_STANDARD 11)
+add_compile_options(-std=c++11)
 include_directories(${catkin_INCLUDE_DIRS})
 
 
