--- a/neonavigation_common/CMakeLists.txt
+++ b/neonavigation_common/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.1.3)
+cmake_minimum_required(VERSION 3.0.2)
 project(neonavigation_common)
 
 set(CATKIN_DEPENDS
@@ -12,7 +12,7 @@ catkin_package(
 )
 
 
-set(CMAKE_CXX_STANDARD 11)
+add_compile_options(-std=c++11 -Wno-deprecated-declarations)
 include_directories(include ${catkin_INCLUDE_DIRS})
 
 
