--- a/obj_to_pointcloud/CMakeLists.txt
+++ b/obj_to_pointcloud/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.1.3)
+cmake_minimum_required(VERSION 3.0.2)
 project(obj_to_pointcloud)
 
 set(CATKIN_DEPENDS
@@ -20,8 +20,7 @@ catkin_package(
 )
 
 
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
+add_compile_options(-std=c++11 -Wno-deprecated-declarations)
 include_directories(${catkin_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS} ${Eigen3_INCLUDE_DIRS})
 add_definitions(${PCL_DEFINITIONS})
 
