--- a/planner_cspace/CMakeLists.txt
+++ b/planner_cspace/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.1.3)
+cmake_minimum_required(VERSION 3.0.2)
 project(planner_cspace)
 
 set(CATKIN_DEPENDS
@@ -31,8 +31,7 @@ catkin_package(
 )
 
 
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -funroll-loops -finline-functions ${OpenMP_CXX_FLAGS}")
+add_compile_options(-std=c++11 -funroll-loops -finline-functions ${OpenMP_CXX_FLAGS})
 include_directories(include ${catkin_INCLUDE_DIRS})
 
 
