--- a/neonavigation_common/CMakeLists.txt
+++ b/neonavigation_common/CMakeLists.txt
@@ -12,7 +12,7 @@ catkin_package(
 )
 
 
-add_compile_options(-std=c++11 -Wno-deprecated-declarations)
+add_compile_options(-std=c++11)
 include_directories(include ${catkin_INCLUDE_DIRS})
 
 
