--- a/planner_cspace/CMakeLists.txt
+++ b/planner_cspace/CMakeLists.txt
@@ -44,9 +44,9 @@ add_executable(planner_3d
 target_link_libraries(planner_3d ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${OpenMP_CXX_FLAGS})
 add_dependencies(planner_3d ${catkin_EXPORTED_TARGETS})
 
-add_executable(planner_2dof_serial_joints src/planner_2dof_serial_joints.cpp)
-target_link_libraries(planner_2dof_serial_joints ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${OpenMP_CXX_FLAGS})
-add_dependencies(planner_2dof_serial_joints ${catkin_EXPORTED_TARGETS})
+#add_executable(planner_2dof_serial_joints src/planner_2dof_serial_joints.cpp)
+#target_link_libraries(planner_2dof_serial_joints ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${OpenMP_CXX_FLAGS})
+#add_dependencies(planner_2dof_serial_joints ${catkin_EXPORTED_TARGETS})
 
 add_executable(dummy_robot src/dummy_robot.cpp)
 target_link_libraries(dummy_robot ${catkin_LIBRARIES})
@@ -70,7 +70,7 @@ endif()
 install(TARGETS
     dummy_robot
     patrol
-    planner_2dof_serial_joints
+    #planner_2dof_serial_joints
     planner_3d
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
