--- a/planner_cspace/test/CMakeLists.txt
+++ b/planner_cspace/test/CMakeLists.txt
@@ -29,12 +29,14 @@ add_rostest_gtest(test_navigate
 target_link_libraries(test_navigate ${catkin_LIBRARIES})
 add_dependencies(test_navigate planner_3d)
 
-add_rostest_gtest(test_navigate_compat
-  test/navigation_compat_rostest.test
-  src/test_navigate.cpp
+add_rostest(test/navigation_rostest.test
+  ARGS antialias_start:=true
+  DEPENDENCIES test_navigate
 )
-target_link_libraries(test_navigate_compat ${catkin_LIBRARIES})
-add_dependencies(test_navigate_compat planner_3d)
+
+add_rostest(test/navigation_compat_rostest.test
+  DEPENDENCIES test_navigate
+)
 
 add_rostest_gtest(test_abort
   test/abort_rostest.test
