Automatically run pre-release test

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,3 +45,4 @@ script:
     $(bash <(curl -s https://codecov.io/env))
     ${DOCKER_CACHE_TARGET}:${ROS_DISTRO_TARGET} /catkin_ws/src/${PACKAGE_NAME}/.travis/test.sh
   - bash -c "[ x${COVERAGE_TEST} != xtrue ] && .travis/save_cache.sh || true"
+  - .travis/prerelease_test.sh
