--- a/.travis.yml
+++ b/.travis.yml
@@ -23,31 +23,29 @@ branches:
 before_install:
   - .travis/load_cache.sh
   - pip install --user gh-pr-comment
-
-install: true
+script:
+  - docker build
+    --cache-from ${DOCKER_CACHE_REGISTRY}:${ROS_DISTRO_TARGET}
+    -t ${DOCKER_CACHE_TARGET}:${ROS_DISTRO_TARGET}
+    -f .travis/Dockerfile
+    --build-arg ROS_DISTRO=${ROS_DISTRO_TARGET}
+    --pull=true ${TRAVIS_BUILD_DIR}
+    || (gh-pr-comment "[[#${TRAVIS_BUILD_NUMBER}](${TRAVIS_BUILD_WEB_URL})] FAILED on ${ROS_DISTRO_TARGET}" "docker build failed"; false)
+  - docker run --rm -it
+    -e TRAVIS_PULL_REQUEST
+    -e TRAVIS_REPO_SLUG
+    -e TRAVIS_BOT_GITHUB_TOKEN
+    -e COVERAGE_TEST
+    -e GITHUB_API_URL_BASE
+    -e TRAVIS_BUILD_NUMBER
+    -e TRAVIS_BUILD_WEB_URL
+    $(bash <(curl -s https://codecov.io/env))
+    ${DOCKER_CACHE_TARGET}:${ROS_DISTRO_TARGET} /catkin_ws/src/${PACKAGE_NAME}/.travis/test.sh
+  - bash -c "[ x${COVERAGE_TEST} != xtrue ] && .travis/save_cache.sh || true"
 
 jobs:
   include:
-    - stage: test
-      script:
-        - docker build
-          --cache-from ${DOCKER_CACHE_REGISTRY}:${ROS_DISTRO_TARGET}
-          -t ${DOCKER_CACHE_TARGET}:${ROS_DISTRO_TARGET}
-          -f .travis/Dockerfile
-          --build-arg ROS_DISTRO=${ROS_DISTRO_TARGET}
-          --pull=true ${TRAVIS_BUILD_DIR}
-          || (gh-pr-comment "[[#${TRAVIS_BUILD_NUMBER}](${TRAVIS_BUILD_WEB_URL})] FAILED on ${ROS_DISTRO_TARGET}" "docker build failed"; false)
-        - docker run --rm -it
-          -e TRAVIS_PULL_REQUEST
-          -e TRAVIS_REPO_SLUG
-          -e TRAVIS_BOT_GITHUB_TOKEN
-          -e COVERAGE_TEST
-          -e GITHUB_API_URL_BASE
-          -e TRAVIS_BUILD_NUMBER
-          -e TRAVIS_BUILD_WEB_URL
-          $(bash <(curl -s https://codecov.io/env))
-          ${DOCKER_CACHE_TARGET}:${ROS_DISTRO_TARGET} /catkin_ws/src/${PACKAGE_NAME}/.travis/test.sh
-        - bash -c "[ x${COVERAGE_TEST} != xtrue ] && .travis/save_cache.sh || true"
     - stage: prerelease-test
       if: branch =~ ^release-.*$ AND env(COVERAGE_TEST) = false
+      before_install: pip install --user gh-pr-comment
       script: .travis/prerelease_test.sh
