--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,6 @@ branches:
 before_install:
   - .travis/load_cache.sh
   - pip install --user gh-pr-comment
-
-install: true
-
 script:
   - docker build
     --cache-from ${DOCKER_CACHE_REGISTRY}:${ROS_DISTRO_TARGET}
@@ -45,3 +42,18 @@ script:
     $(bash <(curl -s https://codecov.io/env))
     ${DOCKER_CACHE_TARGET}:${ROS_DISTRO_TARGET} /catkin_ws/src/${PACKAGE_NAME}/.travis/test.sh
   - bash -c "[ x${COVERAGE_TEST} != xtrue ] && .travis/save_cache.sh || true"
+
+jobs:
+  include:
+    - stage: prerelease-test
+      if: head_branch =~ ^release-.*$
+      env:
+        - ROS_DISTRO_TARGET=kinetic COVERAGE_TEST=false
+      before_install: pip install --user gh-pr-comment
+      script: .travis/prerelease_test.sh
+    - stage: prerelease-test
+      if: head_branch =~ ^release-.*$
+      env:
+        - ROS_DISTRO_TARGET=melodic COVERAGE_TEST=false
+      before_install: pip install --user gh-pr-comment
+      script: .travis/prerelease_test.sh
