--- a/safety_limiter/package.xml
+++ b/safety_limiter/package.xml
@@ -20,6 +20,7 @@
   <depend>pcl_conversions</depend>
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
+  <depend>safety_limiter_msgs</depend>
   <depend>tf2_ros</depend>
   <depend>tf2_sensor_msgs</depend>
 
