safety_limiter: status broadcasting from safety_limiter node (#383)
* add safety_limiter_msgs as a dependency pkg

* the status publisher implemented

* temporary commit to pass CI testings

* link to the exported targets

* put the explicit braces to avoid ambiguous ‘else’

* remove the status field

* address review comments

* appropriate tests added

* use EXPECT_ for status_ checks

* explicit braces added

* use EXPECT instead

* revert the branch constrain

--- a/safety_limiter/package.xml
+++ b/safety_limiter/package.xml
@@ -24,6 +24,7 @@
   <depend>tf2_sensor_msgs</depend>
 
   <depend>neonavigation_common</depend>
+  <depend>safety_limiter_msgs</depend>
 
   <depend>cmake_modules</depend>
   <depend>eigen</depend>
