--- a/neonavigation_launch/config/navigate.yaml
+++ b/neonavigation_launch/config/navigate.yaml
@@ -12,21 +12,26 @@ costmap_3d:
       linear_expand: 0.0
       linear_spread: 0.0
   layers:
+    - name: stop_propagation
+      type: Costmap3dLayerStopPropagation
     - name: overlay2
       type: Costmap3dLayerPlain
       overlay_mode: max
       linear_expand: 0.08
       linear_spread: 0.0
+      keep_unknown: true
     - name: overlay1
       type: Costmap3dLayerFootprint
       overlay_mode: max
       linear_expand: 0.15
       linear_spread: 0.3
+      keep_unknown: true
 planner_3d:
   num_threads: 2
   freq: 2.0
   freq_min: 0.5
   local_range: 2.0
+  remember_update: true
 spur:
   hz: 30.0
   k_dist: 16.0
