--- a/planner_cspace/CMakeLists.txt
+++ b/planner_cspace/CMakeLists.txt
@@ -46,7 +46,10 @@ add_executable(planner_3d
 target_link_libraries(planner_3d ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${OpenMP_CXX_FLAGS})
 add_dependencies(planner_3d ${catkin_EXPORTED_TARGETS})
 
-add_executable(planner_2dof_serial_joints src/planner_2dof_serial_joints.cpp)
+add_executable(planner_2dof_serial_joints
+  src/planner_2dof_serial_joints.cpp
+  src/grid_astar_model_2dof_joints.cpp
+)
 target_link_libraries(planner_2dof_serial_joints ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${OpenMP_CXX_FLAGS})
 add_dependencies(planner_2dof_serial_joints ${catkin_EXPORTED_TARGETS})
 
