--- a/planner_cspace/CMakeLists.txt
+++ b/planner_cspace/CMakeLists.txt
@@ -27,6 +27,7 @@ find_package(catkin REQUIRED COMPONENTS ${CATKIN_DEPENDS})
 find_package(Boost REQUIRED COMPONENTS chrono)
 find_package(OpenMP REQUIRED)
 catkin_package(
+  INCLUDE_DIRS include
   CATKIN_DEPENDS ${CATKIN_DEPENDS}
 )
 
@@ -45,6 +46,15 @@ add_executable(planner_3d
 )
 target_link_libraries(planner_3d ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${OpenMP_CXX_FLAGS})
 add_dependencies(planner_3d ${catkin_EXPORTED_TARGETS})
+set_property(TARGET planner_3d PROPERTY PUBLIC_HEADER
+  include/planner_cspace/bbf.h
+  include/planner_cspace/blockmem_gridmap.h
+  include/planner_cspace/cyclic_vec.h
+  include/planner_cspace/grid_astar.h
+  include/planner_cspace/grid_astar_model.h
+  include/planner_cspace/jump_detector.h
+  include/planner_cspace/reservable_priority_queue.h
+)
 
 add_executable(planner_2dof_serial_joints
   src/planner_2dof_serial_joints.cpp
@@ -80,4 +90,5 @@ install(TARGETS
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+  PUBLIC_HEADER DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
 )
