planner_cspace: disable blockmem_gridmap_performance test

--- a/planner_cspace/test/CMakeLists.txt
+++ b/planner_cspace/test/CMakeLists.txt
@@ -30,12 +30,6 @@ catkin_add_gtest(test_motion_cache
 )
 target_link_libraries(test_motion_cache ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
-catkin_add_gtest(test_blockmem_gridmap_performance
-  src/test_blockmem_gridmap_performance.cpp
-)
-target_link_libraries(test_blockmem_gridmap_performance ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${OpenMP_CXX_FLAGS})
-set_target_properties(test_blockmem_gridmap_performance PROPERTIES COMPILE_FLAGS "${CMAKE_CXX_FLAGS_RELEASE}")  # Force release build for performance test.
-
 add_rostest_gtest(test_debug_outputs
   test/debug_outputs_rostest.test
   src/test_debug_outputs.cpp
@@ -93,3 +87,15 @@ add_rostest_gtest(test_planner_2dof_serial_joints
 )
 target_link_libraries(test_planner_2dof_serial_joints ${catkin_LIBRARIES})
 add_dependencies(test_planner_2dof_serial_joints planner_2dof_serial_joints)
+
+
+if(NEONAVIGATION_EXTRA_TESTS)
+
+  catkin_add_gtest(test_blockmem_gridmap_performance
+    src/test_blockmem_gridmap_performance.cpp
+  )
+  target_link_libraries(test_blockmem_gridmap_performance ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${OpenMP_CXX_FLAGS})
+  # Force release build for performance test.
+  set_target_properties(test_blockmem_gridmap_performance PROPERTIES COMPILE_FLAGS "${CMAKE_CXX_FLAGS_RELEASE}")
+
+endif()
