--- a/safety_limiter/CMakeLists.txt
+++ b/safety_limiter/CMakeLists.txt
@@ -58,6 +58,7 @@ add_dependencies(safety_limiter ${catkin_EXPORTED_TARGETS})
 if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
   find_package(nav_msgs REQUIRED)
+  find_package(tf2_geometry_msgs REQUIRED)
   add_subdirectory(test)
 
   find_package(roslint REQUIRED)
