safety_limiter: use fixed frame for accumulating input cloud (#421)
* Use fixed frame for accumulating input cloud
* Update tests
* Minimize tf delay influence
* Rename variable

--- a/safety_limiter/package.xml
+++ b/safety_limiter/package.xml
@@ -12,12 +12,14 @@
 
   <depend>roscpp</depend>
   <test_depend>nav_msgs</test_depend>
+  <test_depend>tf2_geometry_msgs</test_depend>
   <test_depend>roslint</test_depend>
   <test_depend>rostest</test_depend>
 
   <depend>diagnostic_updater</depend>
   <depend>geometry_msgs</depend>
   <depend>pcl_conversions</depend>
+  <depend>pcl_ros</depend>
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>tf2_ros</depend>
