Add message package version constraints
planner_cspace_msgs >= 0.7.0
trajectory_tracker_msgs >= 0.8.0

--- a/planner_cspace/package.xml
+++ b/planner_cspace/package.xml
@@ -33,6 +33,6 @@
   <depend>costmap_cspace</depend>
   <depend>costmap_cspace_msgs</depend>
   <depend>neonavigation_common</depend>
-  <depend>planner_cspace_msgs</depend>
+  <depend version_gte="0.7.0">planner_cspace_msgs</depend>
   <depend>trajectory_tracker_msgs</depend>
 </package>
