--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,18 @@ script:
 
 jobs:
   include:
+    - stage: test
+      env:
+        - ROS_DISTRO_TARGET=noetic
+      script: |
+        BUILD_LINK="[[#${TRAVIS_BUILD_NUMBER}](${TRAVIS_BUILD_WEB_URL})]"
+        docker run -it --rm \
+          -v $(pwd):/src:ro \
+          alpineros/ros-abuild:3.11-noetic \
+          && gh-pr-comment "${BUILD_LINK} PASSED on ${ROS_DISTRO_TARGET}" \
+            "Tested on Alpine ROS" \
+          || (gh-pr-comment "${BUILD_LINK} FAILED on ${ROS_DISTRO_TARGET}" \
+            "Tested on Alpine ROS"; false) \
     - stage: prerelease-test
       if: head_branch =~ ^release-.*$
       env:
@@ -55,4 +67,10 @@ jobs:
       env:
         - ROS_DISTRO_TARGET=melodic COVERAGE_TEST=false
       before_install: pip install --user gh-pr-comment
+    - stage: prerelease-test
+      if: head_branch =~ ^release-.*$
+      env:
+        - ROS_DISTRO_TARGET=noetic
+      before_install: pip install --user gh-pr-comment
+      script: .travis/prerelease_test.sh
       script: .travis/prerelease_test.sh
