Temporary run prerelease job on this branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ jobs:
         - ROS_DISTRO_TARGET=melodic COVERAGE_TEST=false
       before_install: pip install --user gh-pr-comment
     - stage: prerelease-test
-      if: head_branch =~ ^release-.*$
+      if: head_branch =~ ^(release-.*|ci-for-noetic)$
       env:
         - ROS_DISTRO_TARGET=noetic
       before_install: pip install --user gh-pr-comment
