--- a/neonavigation_launch/package.xml
+++ b/neonavigation_launch/package.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0"?>
-<package format="2">
+<?xml-model
+  href="http://download.ros.org/schema/package_format3.xsd"
+  schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>neonavigation_launch</name>
   <version>0.8.1</version>
   <description>Demonstration and sample launch files for neonavigation meta-package</description>
