--- a/safety_limiter/test/CMakeLists.txt
+++ b/safety_limiter/test/CMakeLists.txt
@@ -2,7 +2,8 @@ add_rostest_gtest(test_safety_limiter
   test/safety_limiter_rostest.test
   src/test_safety_limiter.cpp
 )
-target_link_libraries(test_safety_limiter ${catkin_LIBRARIES})
+target_link_libraries(test_safety_limiter ${catkin_LIBRARIES} ${nav_msgs_LIBRARIES} ${tf2_geometry_msgs_LIBRARIES})
+target_include_directories(test_safety_limiter PUBLIC ${nav_msgs_INCLUDE_DIRS} ${tf2_geometry_msgs_INCLUDE_DIRS})
 include_directories(include)
 
 add_dependencies(test_safety_limiter safety_limiter)
