Update CI scripts

--- a/.travis/Dockerfile
+++ b/.travis/Dockerfile
@@ -28,6 +28,7 @@ RUN apt-get -qq update \
     curl \
     libxml2-utils \
     python-pip \
+    python-rosdep \
     sudo \
     wget \
   && apt-get clean \
