--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ script:
     --build-arg ROS_DISTRO=${ROS_DISTRO_TARGET}
     --pull=true ${TRAVIS_BUILD_DIR}
     || (gh-pr-comment "[[#${TRAVIS_BUILD_NUMBER}](${TRAVIS_BUILD_WEB_URL})] FAILED on ${ROS_DISTRO_TARGET}" "docker build failed"; false)
-  - docker run --rm -it
+  - docker run --rm
     -e TRAVIS_PULL_REQUEST
     -e TRAVIS_REPO_SLUG
     -e TRAVIS_BOT_GITHUB_TOKEN
