Make safety_limiter dynamic-reconfigurable

--- a/safety_limiter/CMakeLists.txt
+++ b/safety_limiter/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CATKIN_DEPENDS
     roscpp
 
     diagnostic_updater
+    dynamic_reconfigure
     geometry_msgs
     pcl_conversions
     pcl_ros
@@ -21,6 +22,11 @@ find_package(catkin REQUIRED COMPONENTS ${CATKIN_DEPENDS})
 find_package(PCL REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(xmlrpcpp REQUIRED)
+
+generate_dynamic_reconfigure_options(
+  cfg/SafetyLimiter.cfg
+)
+
 catkin_package(
   CATKIN_DEPENDS ${CATKIN_DEPENDS}
 )
@@ -54,7 +60,7 @@ add_definitions(-DPCL_NO_PRECOMPILE)
 
 add_executable(safety_limiter src/safety_limiter.cpp)
 target_link_libraries(safety_limiter ${catkin_LIBRARIES} ${PCL_LIBRARIES})
-add_dependencies(safety_limiter ${catkin_EXPORTED_TARGETS})
+add_dependencies(safety_limiter ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencfg)
 
 if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
