--- a/safety_limiter/package.xml
+++ b/safety_limiter/package.xml
@@ -17,6 +17,7 @@
   <test_depend>rostest</test_depend>
 
   <depend>diagnostic_updater</depend>
+  <depend>dynamic_reconfigure</depend>
   <depend>geometry_msgs</depend>
   <depend>pcl_conversions</depend>
   <depend>pcl_ros</depend>
